cmake_minimum_required(VERSION 3.8)
project(ros_srv_c)

# C++17 표준 사용을 권장합니다.
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

# ==============================================================================
# 1. 의존성 찾기 (find_package)
# ==============================================================================
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

# 서비스 정의가 들어있는 cv_msg 패키지를 찾습니다.
# 빌드 시 서비스 헤더 파일 생성을 위해 필요합니다.
find_package(cv_msg REQUIRED)


# ==============================================================================
# 2. 서버 노드 정의 및 빌드 (AddTwoIntsServer)
# ==============================================================================

# 서버 노드 실행 파일 정의
add_executable(server src/server.cpp)

# 서버 노드의 종속성 정의
ament_target_dependencies(server
  rclcpp
  cv_msg  # 서비스 헤더 파일 접근을 위해 필수
)

# ==============================================================================
# 3. 클라이언트 노드 정의 및 빌드 (AddTwoIntsClient)
# ==============================================================================

# 클라이언트 노드 실행 파일 정의
add_executable(client src/client.cpp)

# 클라이언트 노드의 종속성 정의
ament_target_dependencies(client
  rclcpp
  cv_msg  # 서비스 헤더 파일 접근을 위해 필수
)


# ==============================================================================
# 4. 설치 (install)
# ==============================================================================

# 두 실행 파일을 ROS 설치 디렉토리에 복사
install(TARGETS
  server
  client
  DESTINATION lib/${PROJECT_NAME}
)


# ==============================================================================
# 5. 패키지 내보내기 (export)
# ==============================================================================
ament_package()